# internal/infrastructure/api/handlers/order_handler.go
@@ -2,10 +2,14 @@ package handlers
 
 import (
 	"application/ports"
+	"domain/delivery/models/auth"
 	"encoding/json"
+	"github.com/gorilla/mux"
 	"infrastructure/api/dto"
 	"infrastructure/api/responser"
 	"net/http"
+	"shared/logs"
+	"shared/mappers/response_mapper"
 )
 
 type OrderHandler struct {
@@ -32,26 +36,137 @@ func NewOrderHandler(useCase ports.OrdererUseCase) *OrderHandler {
 // @Failure      400  {object}  responser.APIErrorResponse
 // @Router       /api/v1/orders [post]
 func (h *OrderHandler) CreateOrder(w http.ResponseWriter, r *http.Request) {
-	// 1. Decodificar solicitud
+	// 1. Obtener los claims del contexto
+	claims, ok := r.Context().Value("claims").(*auth.AuthClaims)
+	if !ok {
+		logs.Error("Failed to retrieve claims from context", nil)
+		h.respWriter.Error(w, http.StatusUnauthorized, "Unauthorized", nil)
+		return
+	}
+
+	// 2. Decodificar solicitud
 	var requestDTO dto.OrderCreateRequest
 	if err := json.NewDecoder(r.Body).Decode(&requestDTO); err != nil {
 		h.respWriter.HandleError(w, err)
 		return
 	}
 
-	// 2. Verificar si la solicitud es válida
+	// 3. Verificar si la solicitud es válida
 	if err := requestDTO.Validate(); err != nil {
 		h.respWriter.HandleError(w, err)
 		return
 	}
 
-	// 3. Llamar al caso de uso
-	err := h.useCase.CreateOrder(r.Context(), &requestDTO)
+	// 4. Llamar al caso de uso
+	err := h.useCase.CreateOrder(r.Context(), claims.UserID, &requestDTO)
+	if err != nil {
+		h.respWriter.HandleError(w, err)
+		return
+	}
+
+	// 5. Responder
+	h.respWriter.Success(w, http.StatusCreated, "Order created successfully")
+}
+
+// GetOrderByID godoc
+// @Summary      This endpoint is used to get an order by ID
+// @Description  Get order by ID
+// @Tags         orders
+// @Accept       json
+// @Produce      json
+// @Security     BearerAuth
+// @Param        order_id path string true "Order ID"
+// @Success      200  {object}  dto.OrderResponse
+// @Failure      400  {object}  responser.APIErrorResponse
+// @Router       /api/v1/orders/{order_id} [get]
+func (h *OrderHandler) GetOrderByID(w http.ResponseWriter, r *http.Request) {
+	// 1. Extraer ID del pedido
+	vars := mux.Vars(r)
+	orderID := vars["order_id"]
+
+	// 2. Obtener pedido
+	order, err := h.useCase.GetOrderByID(r.Context(), orderID)
+	if err != nil {
+		h.respWriter.HandleError(w, err)
+		return
+	}
+
+	// 3. Mapear a DTO
+	response := response_mapper.OrderToResponseDTO(order)
+
+	// 4. Responder
+	h.respWriter.Success(w, http.StatusOK, response)
+}
+
+// ChangeOrderStatus godoc
+// @Summary      This endpoint is used to change the status of an order
+// @Description  Change order status
+// @Tags         orders
+// @Accept       json
+// @Produce      json
+// @Security     BearerAuth
+// @Param        order_id path string true "Order ID"
+// @Param        status query string true "New status"
+// @Success      200  {object}  dto.OrderResponse
+// @Failure      400  {object}  responser.APIErrorResponse
+// @Router       /api/v1/orders/{order_id} [patch]
+func (h *OrderHandler) ChangeOrderStatus(w http.ResponseWriter, r *http.Request) {
+	// 1. Extraer ID del pedido
+	vars := mux.Vars(r)
+	orderID := vars["order_id"]
+
+	// 2. Extraer el nuevo estado del pedido
+	status := r.URL.Query().Get("status")
+
+	// 3. Cambiar estado
+	err := h.useCase.ChangeStatus(r.Context(), orderID, status)
 	if err != nil {
 		h.respWriter.HandleError(w, err)
 		return
 	}
 
 	// 4. Responder
-	h.respWriter.Success(w, http.StatusCreated, "Order created successfully")
+	h.respWriter.Success(w, http.StatusOK, "Order status changed successfully")
+}
+
+// GetOrdersByCompany godoc
+// @Summary      This endpoint is used to get orders by company
+// @Description  Get orders by company
+// @Tags         orders
+// @Accept       json
+// @Produce      json
+// @Security     BearerAuth
+// @Param        page query int false "Page number"
+// @Param page_size query int false "Page size"
+// @param sort_by query string false "Sort by"
+// @param tracking_number query string false "Tracking number"
+// @Param location query string false "Location like address, city, state, postal code, etc."
+// @Param sort_direction query string false "Sort order"
+// @Param status query string false "Order status"
+// @Param start_date query string false "Start date"
+// @Param end_date query string false "End date"
+// @Success      200  {object}  dto.PaginatedResponse
+// @Failure      400  {object}  responser.APIErrorResponse
+// @Router       /api/v1/orders [get]
+func (h *OrderHandler) GetOrdersByCompany(w http.ResponseWriter, r *http.Request) {
+	// 1. Extraer los claims del contexto
+	claims, ok := r.Context().Value("claims").(*auth.AuthClaims)
+	if !ok {
+		logs.Error("Failed to retrieve claims from context", nil)
+		h.respWriter.Error(w, http.StatusUnauthorized, "Unauthorized", nil)
+		return
+	}
+
+	// 2. Obtener pedidos y parametros de consulta
+	orders, params, total, err := h.useCase.GetOrdersByCompany(r.Context(), claims.UserID, r)
+	if err != nil {
+		h.respWriter.HandleError(w, err)
+		return
+	}
+
+	// 3. Mapear a DTOs
+	response := response_mapper.MapOrdersToResponse(orders, params, total)
+
+	// 4. Responder
+	h.respWriter.Success(w, http.StatusOK, response)
 }
