# internal/infrastructure/api/routes/order_routes.go
@@ -12,4 +12,7 @@ func RegisterOrderRoutes(router *mux.Router, orderHandler *handlers.OrderHandler
 	}).Methods(http.MethodOptions)
 
 	router.HandleFunc("/orders", orderHandler.CreateOrder).Methods(http.MethodPost)
+	router.HandleFunc("/orders", orderHandler.GetOrdersByCompany).Methods(http.MethodGet)
+	router.HandleFunc("/orders/{order_id}", orderHandler.GetOrderByID).Methods(http.MethodGet)
+	router.HandleFunc("/orders/{order_id}", orderHandler.ChangeOrderStatus).Methods(http.MethodPatch)
 }
